# Project-Chimera-TRP1

./: .coderabbit.yaml  .gitignore  B1W0 - Day 3 Chimera_The Agentic Infrastructure_Submission_Report.docx  Dockerfile  Makefile  README.md  chimera.py  main.py  pyproject.toml  run_frontend.bat  ~$W0 - Day 3 Chimera_The Agentic Infrastructure_Submission_Report.docx
.cursor/: rules
.github/workflows/: ci.yml
.tenx_triggers/: logs.json
apps/frontend/: app.py
apps/judge/: main.py  validator.py
apps/planner/: main.py  service.py
apps/worker/: executor.py  main.py
core/: task_models.py
research/: PROJECT_HISTORY.md  tooling_strategy.md
scripts/: agent_wrapper.py  command_with_trigger.bat  command_with_trigger.ps1  log_triggers.py  spec_check.py  verify_swarm.py
skills/content_generator/: README.md  __init__.py  skill.py
skills/publisher/: README.md  skill.py
skills/trend_fetcher/: README.md  skill.py
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
specs/api/: trend_fetch.yaml
specs/schemas/: trend.schema.json
tests/: test_demo_fail.py  test_skills_interface.py  test_trend_fetcher.py
tests/apps/: test_judge.py  test_planner.py  test_worker.py
tests/contracts/: test_trend_contract.py
tests/core/: test_task_models.py
