[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous Influencer Agent Infrastructure"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "tenacity>=8.2",
    "jsonschema>=4.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
